--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>My Creation</title>
 </head>
 <body> 
     <h1>Hello,world!</h1>
-    
+    <P>The is my first web page and I'm excited about learning.  I feel like I'm in elementary school again learning the basics of math, vocabulary, and reading. </P>
 </body>
 </html>
