--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 </head>
 <body> 
     <h1>Hello,world!</h1>
-    <P> style ="color: orange">The is my first web page and I'm excited about learning.  I feel like I'm in elementary school again learning the basics of math, vocabulary, and reading. </P>
+    <P style ="color: orange">The is my first web page and I'm excited about learning.  I feel like I'm in elementary school again learning the basics of math, vocabulary, and reading. </P>
 </body>
 </html>
