index.html git commit -m index.html clear

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body style="background-color: #4A412A"> 
     <h1>Hello,world!</h1>
-    <P style ="color: bright red">The is my first web page and I'm excited about learning.  I feel like I'm in elementary school again learning the basics of math, vocabulary, and reading. </P>
+    <P style ="color: red">The is my first web page and I'm excited about learning.  I feel like I'm in elementary school again learning the basics of math, vocabulary, and reading. </P>
     <img src="https://www.nps.gov/common/uploads/grid_builder/jeff/crop16_9/604D84A7-1DD8-B71B-0BC494D6703273E0.jpg?width=950&quality=90&mode=crop" alt="majestic arch ">
     
 </body>
