--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
     <h1 style ="color: mediumvioletred">Hello,world!</h1>
     <h2 style ="color: red">The is my first web page and I'm excited about learning.  I feel like I'm in elementary school again learning the basics of math, vocabulary, and reading. </h2>
     <img src="https://www.nps.gov/common/uploads/grid_builder/jeff/crop16_9/604D84A7-1DD8-B71B-0BC494D6703273E0.jpg?width=950&quality=90&mode=crop" alt="majestic arch ">
-    <video <iframe width="560" height="315" src="https://www.youtube.com/embed/eP6zzRe4sbA" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>""
-</body>
+    <iframe width="727" height="409" src="https://www.youtube.com/embed/eP6zzRe4sbA" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></body>
 
 </html>
