--- a/index.html
+++ b/index.html
@@ -8,7 +8,11 @@
         <link rel="stylesheet" href="css/style1.css">
     </head>
 <body>
-    <div id="navigation"></div>
+    <div id="navigation">
+       <ul>
+            <li><a href="blog/">WORDS</a></li>
+        </ul>
+    </div>
         
     <div id="header">
         <div class="container">
