--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <div id="navigation">
        <ul>
-            <li><a href="blog/">WORDS</a></li>
+            <li><a href="blog/">HOME</a></li>
         </ul>
     </div>
         
