--- a/index.html
+++ b/index.html
@@ -5,14 +5,17 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <title>My Creation</title>
-        <link rel="stylesheet" href="css/style1.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
+        <link href="https://fonts.googleapis.com/css?family=Alex+Brush|Uncial+Antiqua|Yesteryear" rel="stylesheet">
+        <link rel="stylesheet" href="../css/style.css">
     </head>
-<body>
-    <div id="navigation">
-       <ul>
-            <li><a href="/blog/index.html">HOME</a></li>
-        </ul>
-    </div>
+    
+    <body>
+        <div id="navigation">
+            <ul>
+                <li><a href="/blog/index.html">HOME</a></li>
+            </ul>
+        </div>
         
     <div id="header">
         <div class="container">
